# agentic-newsroom

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md
notebooks/: assignment_editor_agent.ipynb  copy_editor_agent.ipynb  editor_agent.ipynb  editor_in_chief.ipynb  editor_in_chief_agent.ipynb  graphics_desk.ipynb  reporter_agent.ipynb  research_assistant_agent.ipynb  tavily_search_extract.ipynb
src/agentic_newsroom/: schemas.py
src/agentic_newsroom/agents/: assignment_editor.py  copy_editor.py  editor.py  editor_in_chief.py  graphic_desk.py  reporter.py  research_assistant.py
src/agentic_newsroom/llm/: __init__.py  models.py  openai.py
src/agentic_newsroom/prompts/: __init__.py  common.py  context.py
src/agentic_newsroom/schemas/: __init__.py  base.py  models.py  states.py
src/agentic_newsroom/tools/: tavily_search.py  wikipedia_search.py
src/agentic_newsroom/utils/: __init__.py  content.py  files.py  newsroom_logging.py  serializers.py  slugs.py
src/agentic_newsroom/workflows/: __init__.py  newsroom_workflow.py
